# catkin_pkg

./: .flake8  .gitignore  .travis.yml  CHANGELOG.rst  Makefile  README.md  README.rst  azure-pipelines.yml  dput.cf  package.xml  setup.cfg  setup.py  stdeb.cfg  stdeb2.cfg  stdeb3.cfg
.github/workflows/: ci.yaml
catkin_pkg/templates/: package.xml.in
doc/: Makefile  changelog.rst  index.rst  spdx-3.10-2020-08-03.csv  update-conf-py.sh
src/catkin_pkg/: __init__.py  changelog.py  changelog_generator.py  changelog_generator_vcs.py  cmake.py  condition.py  group_dependency.py  metapackage.py  package.py  package_templates.py  package_version.py  packages.py  python_setup.py  rospack.py  terminal_color.py  tool_detection.py  topological_order.py  workspace_vcs.py  workspaces.py
src/catkin_pkg/cli/: create_pkg.py  find_pkg.py  generate_changelog.py  package_version.py  prepare_release.py  tag_changelog.py  test_changelog.py
src/catkin_pkg/templates/: CMakeLists.txt.in  package.xml.in  setup.py.in
src/catkin_pkg/templates/groovy/: CMakeLists.txt.in  package.xml.in
test/: test_catkin_create_pkg.py  test_changelog.py  test_flake8.py  test_metapackage.py  test_package.py  test_package_version.py  test_packages.py  test_tag_changelog.py  test_templates.py  test_terminal_color.py  test_tool_detection.py  test_topological_order.py  test_workspaces.py  util.py
test/data/ignored_packages/catkin_ignore/: package.xml
test/data/ignored_packages/custom_ignore/: package.xml
test/data/metapackages/NonConformingName/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/invalid_cmake/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/invalid_depends/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/leftover_files/: CHANGELOG.rst  CMakeLists.txt  Makefile  package.xml
test/data/metapackages/no_buildtool_depend_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/no_cmake/: CHANGELOG.rst  package.xml
test/data/metapackages/no_metapackage_tag/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/valid_metapackage/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/data/metapackages/valid_metapackage_format2/: CMakeLists.txt  package.xml
test/data/package/: invalid_package.xml  valid_package.xml  xhtml_description.txt  xhtml_description.xml
test/data/package/schema/: invalid_schema.xml  no_schema.xml  valid_schema_1.xml  valid_schema_2.xml  valid_schema_3.xml
test/topological_order/a/: package.xml
test/topological_order/b/: package.xml
test/topological_order/c/: package.xml
test/topological_order/d/: package.xml
