<?xml version="1.0"?>
<package format="2">
  <name>python-catkin-pkg</name>
  <version>1.0.0</version>
  <description>.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <buildtool_depend>python3</buildtool_depend>

  <buildtool_export_depend>python3</buildtool_export_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
