<?xml version="1.0"?>
<package>
  <name>NonConformingName</name>
  <version>0.1.0</version>
  <description>valid_metapackage</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>foo</run_depend>
  <run_depend>bar</run_depend>
  <run_depend>baz</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
